# codeforces

./: .clang-format  1000F.cpp  101021A.cpp  1020A.cpp  1020B.cpp  1023A.cpp  102576C.cpp  102644A.cpp  102644B.cpp  102644C.cpp  102644D.cpp  1029B.cpp  103091A.cpp  1032C.cpp  103536A.cpp  103B.cpp  1040B.cpp  1042B.cpp  1043B.cpp  1051D.cpp  1059A.cpp  1091C.cpp  1095F.cpp  1096D.cpp  1097B.cpp  1103A.cpp  1106D.cpp  1108D.cpp  1108F.cpp  1117B.cpp  1132F.cpp  1133E.cpp  1139C.cpp  1140D.cpp  1141D.cpp  1143C.cpp  1144F.cpp  1144G.cpp  1154A.cpp  1156A.cpp  (+605 more)
