cmake_minimum_required(VERSION 3.17)
project(Codeforces)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fstack-protector")


add_executable(1029B 1029B.cpp)
add_executable(1040B 1040B.cpp)
add_executable(1042B 1042B.cpp)
add_executable(1097B 1097B.cpp)
add_executable(1108D 1108D.cpp)
add_executable(1139C 1139C.cpp)
add_executable(1140D 1140D.cpp)
add_executable(1143C 1143C.cpp)
add_executable(1176C 1176C.cpp)
add_executable(1178B 1178B.cpp)
add_executable(1189C 1189C.cpp)
add_executable(120F 120F.cpp)
add_executable(1215B 1215B.cpp)
add_executable(1234D 1234D.cpp)
add_executable(1245B 1245B.cpp)
add_executable(1245C 1245C.cpp)
add_executable(1253C 1253C.cpp)
add_executable(1272C 1272C.cpp)
add_executable(1276A 1276A.cpp)
add_executable(1282B2 1282B2.cpp)
add_executable(1284B 1284B.cpp)
add_executable(1315B 1315B.cpp)
add_executable(1320A 1320A.cpp)
add_executable(1325C 1325C.cpp)
add_executable(1332C 1332C.cpp)
add_executable(1343C 1343C.cpp)
add_executable(1354B 1354B.cpp)
add_executable(1443B 1443B.cpp)
add_executable(1451C 1451C.cpp)
add_executable(1459B 1459B.cpp)
add_executable(1461B 1461B.cpp)
add_executable(1466C 1466C.cpp)
add_executable(1466D 1466D.cpp)
add_executable(1487A 1487A.cpp)
add_executable(1494A 1494A.cpp)
add_executable(1494B 1494B.cpp)
add_executable(1494C 1494C.cpp)
add_executable(1494D 1494D.cpp)
add_executable(1494E 1494E.cpp)
add_executable(234C 234C.cpp)
add_executable(289B 289B.cpp)
add_executable(416B 416B.cpp)
add_executable(433B 433B.cpp)
add_executable(475B 475B.cpp)
add_executable(501C 501C.cpp)
add_executable(522A 522A.cpp)
add_executable(525A 525A.cpp)
add_executable(526B 526B.cpp)
add_executable(52C 52C.cpp)
add_executable(580C 580C.cpp)
add_executable(602B 602B.cpp)
add_executable(626B 626B.cpp)
add_executable(628B 628B.cpp)
add_executable(653B 653B.cpp)
add_executable(665C 665C.cpp)
add_executable(690C2 690C2.cpp)
add_executable(696A 696A.cpp)
add_executable(729B 729B.cpp)
add_executable(777B 777B.cpp)
add_executable(798B 798B.cpp)
add_executable(802J 802J.cpp)
add_executable(821C 821C.cpp)
add_executable(839C 839C.cpp)
add_executable(859C 859C.cpp)
add_executable(870C 870C.cpp)
add_executable(901A 901A.cpp)
add_executable(920C 920C.cpp)
add_executable(930A 930A.cpp)
add_executable(959C 959C.cpp)
add_executable(961B 961B.cpp)
add_executable(981C 981C.cpp)
add_executable(982C 982C.cpp)
add_executable(987C 987C.cpp)
add_executable(998B 998B.cpp)
add_executable(1492A 1492A.cpp)