cmake_minimum_required(VERSION 3.17)
project(Codeforces)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fstack-protector")

#codeforces problemset
add_executable(1029B 1029B.cpp)
add_executable(103B 103B.cpp)
add_executable(1040B 1040B.cpp)
add_executable(1042B 1042B.cpp)
add_executable(1043B 1043B.cpp)
add_executable(1097B 1097B.cpp)
add_executable(1106D 1106D.cpp)
add_executable(1108D 1108D.cpp)
add_executable(1108F 1108F.cpp)
add_executable(1139C 1139C.cpp)
add_executable(1140D 1140D.cpp)
add_executable(1143C 1143C.cpp)
add_executable(1154A 1154A.cpp)
add_executable(115A 115A.cpp)
add_executable(1176C 1176C.cpp)
add_executable(1178B 1178B.cpp)
add_executable(1189C 1189C.cpp)
add_executable(118D 118D.cpp)
add_executable(120F 120F.cpp)
add_executable(1215B 1215B.cpp)
add_executable(1234D 1234D.cpp)
add_executable(1245B 1245B.cpp)
add_executable(1245C 1245C.cpp)
add_executable(1253C 1253C.cpp)
add_executable(1263D 1263D.cpp)
add_executable(1272C 1272C.cpp)
add_executable(1276A 1276A.cpp)
add_executable(1282B2 1282B2.cpp)
add_executable(1284B 1284B.cpp)
add_executable(1294A 1294A.cpp)
add_executable(1295C 1295C.cpp)
add_executable(1304C 1304C.cpp)
add_executable(1315B 1315B.cpp)
add_executable(1320A 1320A.cpp)
add_executable(1324C 1324C.cpp)
add_executable(1324D 1324D.cpp)
add_executable(1325C 1325C.cpp)
add_executable(1327B 1327B.cpp)
add_executable(1328A 1328A.cpp)
add_executable(1328B 1328B.cpp)
add_executable(1332C 1332C.cpp)
add_executable(1335D 1335D.cpp)
add_executable(1338A 1338A.cpp)
add_executable(1343C 1343C.cpp)
add_executable(1348A 1348A.cpp)
add_executable(1354B 1354B.cpp)
add_executable(1363B 1363B.cpp)
add_executable(1365C 1365C.cpp)
add_executable(1365D 1365D.cpp)
add_executable(1370A 1370A.cpp)
add_executable(1373D 1373D.cpp)
add_executable(1374C 1374C.cpp)
add_executable(1374D 1374D.cpp)
add_executable(1375C 1375C.cpp)
add_executable(1385A 1385A.cpp)
add_executable(1389B 1389B.cpp)
add_executable(1389C 1389C.cpp)
add_executable(1391C 1391.cpp)
add_executable(1395C 1395C.cpp)
add_executable(1398C 1398C.cpp)
add_executable(1407C 1407C.cpp)
add_executable(1418C 1418C.cpp)
add_executable(1443B 1443B.cpp)
add_executable(1451C 1451C.cpp)
add_executable(1459B 1459B.cpp)
add_executable(1461B 1461B.cpp)
add_executable(1466C 1466C.cpp)
add_executable(1466D 1466D.cpp)
add_executable(1479A 1479A.cpp)
add_executable(1487A 1487A.cpp)
add_executable(1487C 1487C.cpp)
add_executable(1492A 1492A.cpp)
add_executable(1492B 1492B.cpp)
add_executable(1492C 1492C.cpp)
add_executable(1494A 1494A.cpp)
add_executable(1494B 1494B.cpp)
add_executable(1494C 1494C.cpp)
add_executable(1494D 1494D.cpp)
add_executable(1494E 1494E.cpp)
add_executable(1505A 1505A.cpp)
add_executable(1519A 1519A.cpp)
add_executable(1520A 1520A.cpp)
add_executable(1520B 1520B.cpp)
add_executable(1520C 1520C.cpp)
add_executable(1520D 1520D.cpp)
add_executable(1520E 1520E.cpp)
add_executable(1520F1 1520F1.cpp)
add_executable(1521A 1521A.cpp)
add_executable(1521B 1521B.cpp)
add_executable(1523A 1523A.cpp)
add_executable(1523B 1523B.cpp)
add_executable(1523C 1523C.cpp)
add_executable(1526C1 1526C1.cpp)
add_executable(1526C2 1526C2.cpp)
add_executable(1529A 1529A.cpp)
add_executable(1529B 1529B.cpp)
add_executable(1529C 1529C.cpp)
add_executable(1531A 1531A.cpp)
add_executable(1534A 1534A.cpp)
add_executable(1534B 1534B.cpp)
add_executable(1534C 1534C.cpp)
add_executable(1534D 1534D.cpp)
add_executable(1536B 1536B.cpp)
add_executable(1536C 1536C.cpp)
add_executable(1537A 1537A.cpp)
add_executable(1537B 1537B.cpp)
add_executable(1538A 1538A.cpp)
add_executable(1538B 1538B.cpp)
add_executable(1538C 1538C.cpp)
add_executable(1538D 1538D.cpp)
add_executable(1538F 1538F.cpp)
add_executable(1540A 1540A.cpp)
add_executable(1541A 1541A.cpp)
add_executable(1541B 1541B.cpp)
add_executable(1545A 1545A.cpp)
add_executable(1546A 1546A.cpp)
add_executable(1546B 1546B.cpp)
add_executable(1547A 1547A.cpp)
add_executable(1547B 1547B.cpp)
add_executable(1547C 1547C.cpp)
add_executable(1547D 1547D.cpp)
add_executable(1547E 1547E.cpp)
add_executable(1547F 1547F.cpp)
add_executable(165C 165C.cpp)
add_executable(166E 166E.cpp)
add_executable(17B 17B.cpp)
add_executable(20A 20A.cpp)
add_executable(20C 20C.cpp)
add_executable(217A 217A.cpp)
add_executable(234C 234C.cpp)
add_executable(25D 25D.cpp)
add_executable(289B 289B.cpp)
add_executable(313B 313B.cpp)
add_executable(321C 321C.cpp)
add_executable(339D 339D.cpp)
add_executable(416B 416B.cpp)
add_executable(431C 431C.cpp)
add_executable(433B 433B.cpp)
add_executable(437C 437C.cpp)
add_executable(446A 446A.cpp)
add_executable(455A 455A.cpp)
add_executable(466C 466C.cpp)
add_executable(467B 467B.cpp)
add_executable(474D 474D.cpp)
add_executable(474F 474F.cpp)
add_executable(475B 475B.cpp)
add_executable(501B 501B.cpp)
add_executable(501C 501C.cpp)
add_executable(510C 510C.cpp)
add_executable(514B 514B.cpp)
add_executable(522A 522A.cpp)
add_executable(525A 525A.cpp)
add_executable(526B 526B.cpp)
add_executable(52C 52C.cpp)
add_executable(545C 545C.cpp)
add_executable(550A 550A.cpp)
add_executable(550C 550C.cpp)
add_executable(580C 580C.cpp)
add_executable(602B 602B.cpp)
add_executable(626B 626B.cpp)
add_executable(628B 628B.cpp)
add_executable(653B 653B.cpp)
add_executable(665C 665C.cpp)
add_executable(676C 676C.cpp)
add_executable(679A 679A.cpp)
add_executable(687A 687A.cpp)
add_executable(690C2 690C2.cpp)
add_executable(696A 696A.cpp)
add_executable(706C 706C.cpp)
add_executable(729B 729B.cpp)
add_executable(749A 749A.cpp)
add_executable(763A 763A.cpp)
add_executable(771A 771A.cpp)
add_executable(776D 776D.cpp)
add_executable(777B 777B.cpp)
add_executable(798B 798B.cpp)
add_executable(802J 802J.cpp)
add_executable(821C 821C.cpp)
add_executable(822A 822A.cpp)
add_executable(839C 839C.cpp)
add_executable(859C 859C.cpp)
add_executable(870C 870C.cpp)
add_executable(901A 901A.cpp)
add_executable(920C 920C.cpp)
add_executable(930A 930A.cpp)
add_executable(939A 939A.cpp)
add_executable(959B 959B.cpp)
add_executable(959C 959C.cpp)
add_executable(961B 961B.cpp)
add_executable(977E 977E.cpp)
add_executable(981C 981C.cpp)
add_executable(982C 982C.cpp)
add_executable(987C 987C.cpp)
add_executable(998B 998B.cpp)

#codeforces gym
add_executable(101021A 101021A.cpp)
add_executable(102644A 102644A.cpp)
add_executable(102644B 102644B.cpp)
add_executable(102644C 102644C.cpp)
add_executable(102644D 102644D.cpp)
add_executable(103091A 103091A.cpp)